--- a/nextjs/components/home/RecommendedProperties.module.css
+++ b/nextjs/components/home/RecommendedProperties.module.css
@@ -157,11 +157,11 @@
     }
 
     .title {
-        font-size: 1.75rem;
+        font-size: 1.35rem;
     }
 
     .description {
-        font-size: 1rem;
+        font-size: 0.875rem;
     }
 
     .grid {
